--- a/api/package.json
+++ b/api/package.json
@@ -19,8 +19,12 @@
     "prettier": "3.5.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-mysql-session": "^3.0.3",
+    "express-session": "^1.18.1",
+    "joi": "^17.13.3",
     "mysql2": "^3.14.0"
   }
 }
