--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "editor.tabSize": 2,
     "cSpell.words": [
-        "alphanum"
+        "alphanum",
+        "appbar",
+        "Sitemark"
     ]
 }
