--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
     "joi": "^17.13.3",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "socket.io": "^4.8.1"
   }
