--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "joi": "^17.13.3",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
+    "sharp": "^0.34.1",
     "socket.io": "^4.8.1"
   }
 }
